[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Mystery Font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://music/Alchemical_Folly.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=2]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
position = Vector2( -15, -76 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_left = -367.0
margin_top = -237.0
margin_right = 353.0
margin_bottom = 243.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -148.0
margin_top = -11.0
margin_right = 148.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.776471, 0.239216, 0.239216, 1 )
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.0
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -69.0
margin_top = 61.0
margin_right = 89.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainBtn" type="Button" parent="VBoxContainer"]
margin_right = 158.0
margin_bottom = 22.0
custom_colors/font_color_focus = Color( 0.760784, 0.733333, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Play  Again"
flat = true

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 158.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "Credits"
flat = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="VBoxContainer/PlayAgainBtn" to="." method="_on_PlayAgainBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/Credits" to="." method="_on_Credits_button_down"]
